fix header z-index

--- a/source/elements/header/_header.sass
+++ b/source/elements/header/_header.sass
@@ -7,6 +7,7 @@ header
 	line-height: 20px
 	transition: all .4s ease
 	padding: 40px 0
+	z-index: 10
 	.is-scroll &
 		padding: 20px 0
 		box-shadow: 0 1px 2px $gray
